<resources>
    <string name="app_name">Lotus</string>

    <!-- Menu Bottom Sheet -->
    <string name="title_home">Home</string>
    <string name="reflection">Reflection</string>
    <string name="tipitaka">Tipitaka</string>
    <string name="meditation">Meditation</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_notifications">Notification Title</string>
    <string name="title_dashboard">Dashboard Title</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="explore">Explore</string>
    <string name="notification">Notification</string>
    <string name="direct_message">Direct Message</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email or Password</string>
    <string name="prompt_password"> Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forget_password">Forget Password?</string>
    <string name="profile_s_name">Profile\'s_name</string>
    <string name="bio">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <string name="edit_profile">Edit profile</string>
    <string name="postingan">Post</string>

    <string name="title_activity_direct_message">DirectMessage</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_post">Create Post</string>
    <string name="appName">Lotus</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="btnUploadVideo">Upload Video</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main_d_m">MainActivityDM</string>
    <string name="messages">Messages</string>
    <string name="alertNoDataPost">You haven\'t add any story or media.</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="post">Post</string>
    <string name="reply">Reply</string>
    <string name="yesterday">Yesterday</string>
    <string name="now">Now</string>
    <string name="date_format">dd MMMM yyyy</string>
    <string name="date_format_full">yyyy-MM-dd\'T\'HH:mm:ssX</string>
    <string name="hint_caption">Tell the story about goodness...</string>
    <string name="image">image</string>
    <string name="video">video</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="title_activity_profile_child">ProfileChildActivity</string>
    <string name="editprofile">Edit Profile</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login">Email or Username or Whatsapp Number</string>
    <string name="number">Phone Number</string>
    <string name="birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="security">Security</string>
    <string name="biografi">bio</string>
    <string name="ChangePassword">Change Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="repost">Repost</string>
    <string name="choose">Choose</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="add_hashtag">Add Hashtag</string>
    <string name="hint_add_tag">Hashtag separated by comma (ex: Hashtag1, Hashtag2)</string>
    <string name="load_more_reply">Load more reply</string>
    <string name="lorem_ipsum">Lorem Ipsum Dolor Sit Amet</string>
    <string name="search_explore">Search people or use \"#\" to search hashtag</string>
    <string name="register">Create Your Account</string>
    <string name="next">Next</string>
    <string name="withWhatsapp">Use your Whatsapp number instead</string>
    <string name="withNumber">Use your email instead</string>
    <string name="VerifCode">Verification Code</string>
    <string name="verificationcode">We\'ve sent you code to confirm your email     </string>
    <string name="googleaccount">abcdefghij@gmail.com</string>
    <string name="sendcode"> Send Code Again</string>
    <string name="ChoseYN">Chose Your Username</string>
    <string name="ChangePP">Change Profile Picture</string>
    <string name="Password">Password</string>
    <string name="SetYN">Set your password</string>
    <string name="internetError">Oops! You lost your internet \n connetion. Please connect to a \n network and reload</string>
    <string name="server_error">Oops! There\'s something wrong in our \n server. Please comeback later</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <!-- Text Home-->

    <!-- -->
</resources>
