<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.ProfileDataFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="47dp"
        android:layout_marginRight="160dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/ic_profile" />


    <TextView
        android:id="@+id/nameprofile"
        android:layout_below="@+id/imageEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/ChangePP"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="448dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="Name"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/username"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/biografi"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/email"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="Phone Number"
                android:inputType="number"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/birth"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/gender"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnChangePP"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="#FBC9A7"
            android:enabled="true"
            android:text="@string/next"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSkipPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="Skip >>"></TextView>
</LinearLayout>