<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editprofile.EditProfileFragment">

    <include layout="@layout/snippet_edit_profile"></include>

    <ImageView
        android:id="@+id/imageEditProfile"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="47dp"
        android:layout_marginRight="160dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/ic_profile" />
    <TextView
        android:id="@+id/nameprofile"
        android:layout_below="@+id/imageEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="155dp"
        android:gravity="center_horizontal"
        android:text="@string/profile_s_name"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="448dp"
        android:layout_below="@+id/nameprofile"
        android:layout_marginTop="34dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/white"
                android:hint="Name"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/white"
                android:hint="@string/username"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/white"
                android:hint="@string/biografi"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/white"
                android:hint="@string/email"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/white"
                android:hint="Phone Number"
                android:inputType="number"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/white"
                android:hint="@string/birth"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/white"
                android:hint="@string/gender"
                android:textSize="12sp"
                android:textColor="#F79543"
                android:textColorHint="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


</RelativeLayout>