<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.register.VerificationCodeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tbVerCode"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:elevation="20dp"
            app:navigationIcon="@drawable/ic_arrow_back_black"
            app:titleTextColor="#6B6B6B" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/register_Verifcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/VerifCode"
            android:textColor="#333"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verificationcode"
                android:textColor="#333"
                android:textSize="12sp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/googleaccount"
                android:textAlignment="center"
                android:textColor="#333"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tvSendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendcode"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sendcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etVerifCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/VerifCode"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnContinueVC"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"
            android:background="#FBC9A7"
            android:enabled="false"
            android:text="@string/next"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2" />

    </LinearLayout>


</LinearLayout>